updated social section

--- a/about.html
+++ b/about.html
@@ -73,20 +73,11 @@
                 <a target="_blank" href="https://twitter.com/Satyaji33351978">
                     <i class="fab fa-x-twitter fa-2x"></i>
                 </a>
-                <a target="_blank" href="https://www.facebook.com/K.Ashutosh.002/">
-                    <i class="fab fa-facebook fa-2x"></i>
-                </a>
                 <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
                     <i class="fab fa-github fa-2x"></i>
                 </a>
-                <a target="_blank" href="https://www.deviantart.com/ashutosh02">
-                    <i class="fab fa-deviantart fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://discordapp.com/users/550450872912445479">
-                    <i class="fab fa-discord fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://unsplash.com/@ashutosh_02">
-                    <i class="fab fa-unsplash fa-2x"></i>
+                <a target="_blank" href="https://www.linkedin.com/in/satyajit-sahoo-28052001/">
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
 
