--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="icon" style="color: #fff;" type="image/x-icon" href="./img/portfolioIcon.png">
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
     <title>Portfolio | Satyajit Sahoo</title>
 </head>
 
 <body>
+    <div id="particles-js"></div>
     <header>
         <div class="menu-btn">
             <span class="menu-btn__burger"></span>
@@ -61,20 +64,11 @@
                 <a target="_blank" href="https://twitter.com/Satyaji33351978">
                     <i class="fab fa-x-twitter fa-2x"></i>
                 </a>
-                <a target="_blank" href="https://www.facebook.com/K.Ashutosh.002/">
-                    <i class="fab fa-facebook fa-2x"></i>
-                </a>
                 <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
                     <i class="fab fa-github fa-2x"></i>
                 </a>
-                <a target="_blank" href="https://www.deviantart.com/ashutosh02">
-                    <i class="fab fa-deviantart fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://discordapp.com/users/550450872912445479">
-                    <i class="fab fa-discord fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://unsplash.com/@ashutosh_02">
-                    <i class="fab fa-unsplash fa-2x"></i>
+                <a target="_blank" href="https://www.linkedin.com/in/satyajit-sahoo-28052001/">
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </div>
 
@@ -82,8 +76,13 @@
         </section>
     </main>
 
+
+
     <script src="https://kit.fontawesome.com/d188fc89c0.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/particles.js"></script>
+
+
 </body>
 
 </html>
