--- a/about.html
+++ b/about.html
@@ -9,10 +9,12 @@
     <link rel="icon" style="color: #fff;" type="image/x-icon" href="./img/portfolioIcon.png">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <title>About Satyajit</title>
 </head>
 
 <body>
+    <div id="particles-js"></div>
     <header>
         <div class="menu-btn">
             <span class="menu-btn__burger"></span>
@@ -87,6 +89,7 @@
 
     <script src="https://kit.fontawesome.com/d188fc89c0.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/particles.js"></script>
 </body>
 
 </html>
