--- a/projects.html
+++ b/projects.html
@@ -105,21 +105,20 @@
                     </div>
                 </div>
 
-                <h3 class="projects__name">Laundry Management<span class="projects__details">| express.js, mongoDB, ejs,
-                        passport.js |</span></h3>
+                <h3 class="projects__name">Dev Jokes chrome Extension<span class="projects__details">| HTML, CSS,
+                        JavaScript |</span></h3>
                 <div class="projects__items__item">
-                    <img src="./img/Laundry.png" alt="My Project">
+                    <img src="./img/extension.png" alt="My Project">
                     <div class="projects__btns">
-                        <a href="https://laundry-management-3sj8.onrender.com/" target="_blank" class="projects__btn">
+                        <!-- <a href="https://laundry-management-3sj8.onrender.com/" target="_blank" class="projects__btn">
                             <i class="fas fa-eye"></i>
-                        </a>
-                        <a class="projects__btn" href="https://github.com/Ashutosh002/LaundryManagement"
+                        </a> -->
+                        <a class="projects__btn" href="https://github.com/Satyajit-Sahoo45/Dev_Extension"
                             target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
                 </div>
-
             </div>
 
             <div class="social-icons">
