--- a/projects.html
+++ b/projects.html
@@ -1,144 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/main.css">
-    <link rel="icon" style="color: #fff;" type="image/x-icon" href="./img/portfolioIcon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./public/css/main.css" />
+    <link
+      rel="icon"
+      style="color: #fff"
+      type="image/x-icon"
+      href="./img/portfolioIcon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+    />
     <title>Projects by Satyajit</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
 
-        <nav class="nav">
-            <ul class="menu-nav">
-                <li class="menu-nav__item">
-                    <a href="./index.html" class="menu-nav__link ">Home</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./about.html" class="menu-nav__link">About Me</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./projects.html" class="menu-nav__link active ">Projects</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./contact.html" class="menu-nav__link">Contact Me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a href="./index.html" class="menu-nav__link">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./about.html" class="menu-nav__link">About Me</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./projects.html" class="menu-nav__link active">Projects</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./contact.html" class="menu-nav__link">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="projects">
-            <div class="projects__bio-image">
-                <h2 class="text-secondary">MY PROJECTS <span class="hint">(Click on project's image for links to visit
-                        the page.)</span></h2>
+      <section class="projects">
+        <div class="projects__bio-image">
+          <h2 class="text-secondary">
+            MY PROJECTS
+            <span class="hint"
+              >(Click on project's image for links to visit the page.)</span
+            >
+          </h2>
+        </div>
 
+        <div class="projects__items">
+          <h3 class="projects__name">
+            Car ShowCase App
+            <span class="projects__details"
+              >| NextJS, React, TypeScript, Tailwind, Supabase, PostgreSql,
+              Stripe, Vercel |</span
+            >
+          </h3>
+          <div class="projects__items__item">
+            <img src="./img/spotify-clone.png" alt="My Project" />
+            <div class="projects__btns">
+              <a
+                href="https://spotify-clone-rgsf.vercel.app/"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fas fa-eye"></i>
+              </a>
+              <a
+                href="https://github.com/Satyajit-Sahoo45/spotify_clone"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fab fa-github"></i>
+              </a>
             </div>
+          </div>
 
-            <div class="projects__items">
+          <div class="projects__items__item">
+            <img src="./img/carshowcase.png" alt="My Project" />
+            <div class="projects__btns">
+              <a
+                href="https://car-showcase-project-nrsp.vercel.app/"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fas fa-eye"></i>
+              </a>
+              <a
+                href="https://github.com/Satyajit-Sahoo45/car-showcase-project"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </div>
 
-                <h3 class="projects__name">Car ShowCase App <span class="projects__details">| NextJS, headlessUI
-                        |</span>
-                </h3>
-                <div class="projects__items__item">
-                    <img src="./img/carshowcase.png" alt="My Project">
-                    <div class="projects__btns">
-                        <a href="https://car-showcase-project-nrsp.vercel.app/" target="_blank" class="projects__btn">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <a href="https://github.com/Satyajit-Sahoo45/car-showcase-project" target="_blank"
-                            class="projects__btn">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div>
+          <h3 class="projects__name">
+            Todo App
+            <span class="projects__details"
+              >| ReactJS, Javascript, HTML, CSS |</span
+            >
+          </h3>
+          <div class="projects__items__item">
+            <img src="./img/todo.png" alt="My Project" />
+            <div class="projects__btns">
+              <a
+                href="https://satyajit-sahoo45.github.io/TodosApp/"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fas fa-eye"></i>
+              </a>
+              <a
+                href="https://github.com/Satyajit-Sahoo45/TodosApp"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </div>
 
-                <h3 class="projects__name">Todo App <span class="projects__details">| ReactJS, Javascript, HTML, CSS
-                        |</span></h3>
-                <div class="projects__items__item">
-                    <img src="./img/todo.png" alt="My Project">
-                    <div class="projects__btns">
-                        <a href="https://satyajit-sahoo45.github.io/TodosApp/" target="_blank" class="projects__btn">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <a href="https://github.com/Satyajit-Sahoo45/TodosApp" target="_blank" class="projects__btn">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div>
+          <h3 class="projects__name">
+            Simon Game
+            <span class="projects__details">| JavaScript, HTML, CSS |</span>
+          </h3>
+          <div class="projects__items__item">
+            <img src="./img/simon.png" alt="My Project" />
+            <div class="projects__btns">
+              <a
+                href="https://satyajit-sahoo45.github.io/Simon-Game/"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fas fa-eye"></i>
+              </a>
+              <a
+                href="https://github.com/Satyajit-Sahoo45/Simon-Game"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </div>
 
-                <h3 class="projects__name"> Simon Game <span class="projects__details">| JavaScript, HTML, CSS |</span>
-                </h3>
-                <div class="projects__items__item">
-                    <img src="./img/simon.png" alt="My Project">
-                    <div class="projects__btns">
-                        <a href="https://satyajit-sahoo45.github.io/Simon-Game/" target="_blank" class="projects__btn">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <a href="https://github.com/Satyajit-Sahoo45/Simon-Game" target="_blank" class="projects__btn">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div>
+          <h3 class="projects__name">
+            Keeper<span class="projects__details">| react.js |</span>
+          </h3>
+          <div class="projects__items__item">
+            <img src="./img/Keeper.png" alt="My Project" />
+            <div class="projects__btns">
+              <a
+                href="https://wcfulq.csb.app/"
+                target="_blank"
+                class="projects__btn"
+              >
+                <i class="fas fa-eye"></i>
+              </a>
+              <a
+                class="projects__btn"
+                href="https://github.com/Satyajit-Sahoo45/Google-Keep-Clone"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </div>
 
-                <h3 class="projects__name">Keeper<span class="projects__details">| react.js |</span></h3>
-                <div class="projects__items__item">
-                    <img src="./img/Keeper.png" alt="My Project">
-                    <div class="projects__btns">
-                        <a href="https://wcfulq.csb.app/" target="_blank" class="projects__btn">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <a class="projects__btn" href="https://github.com/Satyajit-Sahoo45/Google-Keep-Clone"
-                            target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <h3 class="projects__name">Dev Jokes chrome Extension<span class="projects__details">| HTML, CSS,
-                        JavaScript |</span></h3>
-                <div class="projects__items__item">
-                    <img src="./img/extension.png" alt="My Project">
-                    <div class="projects__btns">
-                        <!-- <a href="https://laundry-management-3sj8.onrender.com/" target="_blank" class="projects__btn">
+          <h3 class="projects__name">
+            Dev Jokes chrome Extension<span class="projects__details"
+              >| HTML, CSS, JavaScript |</span
+            >
+          </h3>
+          <div class="projects__items__item">
+            <img src="./img/extension.png" alt="My Project" />
+            <div class="projects__btns">
+              <!-- <a href="https://laundry-management-3sj8.onrender.com/" target="_blank" class="projects__btn">
                             <i class="fas fa-eye"></i>
                         </a> -->
-                        <a class="projects__btn" href="https://github.com/Satyajit-Sahoo45/Dev_Extension"
-                            target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div>
+              <a
+                class="projects__btn"
+                href="https://github.com/Satyajit-Sahoo45/Dev_Extension"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i>
+              </a>
             </div>
+          </div>
+        </div>
 
-            <div class="social-icons">
-                <a target="_blank" href="https://twitter.com/Satyaji33351978">
-                    <i class="fab fa-x-twitter fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/satyajit-sahoo-28052001/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
+        <div class="social-icons">
+          <a target="_blank" href="https://twitter.com/Satyaji33351978">
+            <i class="fab fa-x-twitter fa-2x"></i>
+          </a>
+          <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/satyajit-sahoo-28052001/"
+          >
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+        </div>
 
-            <footer>&copy; No Copyright <span id="year"></span></footer>
-        </section>
+        <footer>&copy; No Copyright <span id="year"></span></footer>
+      </section>
     </main>
 
-    <script src="https://kit.fontawesome.com/d188fc89c0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d188fc89c0.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
-</body>
-
+  </body>
 </html>
