--- a/contact.html
+++ b/contact.html
@@ -1,82 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/main.css">
-    <link rel="icon" style="color: #fff;" type="image/x-icon" href="./img/portfolioIcon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./public/css/main.css" />
+    <link
+      rel="icon"
+      style="color: #fff"
+      type="image/x-icon"
+      href="./img/portfolioIcon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Contact Satyajit</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
 
-        <nav class="nav">
-            <ul class="menu-nav">
-                <li class="menu-nav__item">
-                    <a href="./index.html" class="menu-nav__link ">Home</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./about.html" class="menu-nav__link">About Me</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./projects.html" class="menu-nav__link">Projects</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./contact.html" class="menu-nav__link active">Contact Me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a href="./index.html" class="menu-nav__link">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./about.html" class="menu-nav__link">About Me</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./projects.html" class="menu-nav__link">Projects</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./contact.html" class="menu-nav__link active"
+              >Contact Me</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="contact">
-            <h1>Contact Me</h1>
+      <section class="contact">
+        <h1>Contact Me</h1>
 
-            <div class="contact__list">
-                <div class="contact__email">
-                    <i class="fas fa-envelope"></i>
-                    <span class="email">Email</span>
-                    <div class="text-secondary">sahoosatyajit2801@@gmail.com</div>
-                </div>
+        <div class="contact__list">
+          <div class="contact__email">
+            <i class="fas fa-envelope"></i>
+            <span class="email">Email</span>
+            <div class="text-secondary">sahoosatyajit2801@gmail.com</div>
+          </div>
 
-                <div class="contact__phone">
-                    <i class="fas fa-mobile-alt"> </i>
-                    <span class="phone">Phone</span>
-                    <div class="text-secondary">+91 7873585158</div>
-                </div>
+          <div class="contact__phone">
+            <i class="fas fa-mobile-alt"> </i>
+            <span class="phone">Phone</span>
+            <div class="text-secondary">+91 7873585158</div>
+          </div>
 
-                <div class="contact__address">
-                    <i class="fas fa-map-marker"></i>
-                    <span class="location">Address</span>
-                    <div class="text-secondary">Bhubaneswar, Odisha</div>
-                </div>
-            </div>
+          <div class="contact__address">
+            <i class="fas fa-map-marker"></i>
+            <span class="location">Address</span>
+            <div class="text-secondary">Bhubaneswar, Odisha</div>
+          </div>
+        </div>
 
-            <div class="social-icons">
-                <a target="_blank" href="https://twitter.com/Satyaji33351978">
-                    <i class="fab fa-x-twitter fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/satyajit-sahoo-28052001/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
+        <div class="social-icons">
+          <a target="_blank" href="https://twitter.com/Satyaji33351978">
+            <i class="fab fa-x-twitter fa-2x"></i>
+          </a>
+          <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/satyajit-sahoo-28052001/"
+          >
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+        </div>
 
-            <footer>&copy; No Copyright <span id="year"></span></footer>
-        </section>
+        <footer>&copy; No Copyright <span id="year"></span></footer>
+      </section>
     </main>
 
-    <script src="https://kit.fontawesome.com/d188fc89c0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d188fc89c0.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
-</body>
-
+  </body>
 </html>
