project section modified

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 
         <div class="projects__items">
           <h3 class="projects__name">
-            Car ShowCase App
+            Spotify Clone
             <span class="projects__details"
               >| NextJS, React, TypeScript, Tailwind, Supabase, PostgreSql,
               Stripe, Vercel |</span
@@ -93,6 +93,12 @@
           </div>
 
           <div class="projects__items__item">
+            <h3 class="projects__name">
+              Car Showcase App
+              <span class="projects__details"
+                >| NextJS, ReactJS, Tailwind, headlessUI |</span
+              >
+            </h3>
             <img src="./img/carshowcase.png" alt="My Project" />
             <div class="projects__btns">
               <a
