--- a/index.html
+++ b/index.html
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/main.css">
-    <link rel="icon" style="color: #fff;" type="image/x-icon" href="./img/portfolioIcon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/css/main.css" />
+    <link
+      rel="icon"
+      style="color: #fff"
+      type="image/x-icon"
+      href="./img/portfolioIcon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <title>Portfolio | Satyajit Sahoo</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="particles-js"></div>
     <header>
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
 
-        <nav class="nav">
-            <ul class="menu-nav">
-                <li class="menu-nav__item ">
-                    <a href="./index.html" class="menu-nav__link active">Home</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./about.html" class="menu-nav__link">About Me</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./projects.html" class="menu-nav__link">Projects</a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="./contact.html" class="menu-nav__link">Contact Me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a href="./index.html" class="menu-nav__link active">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./about.html" class="menu-nav__link">About Me</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./projects.html" class="menu-nav__link">Projects</a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="./contact.html" class="menu-nav__link">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="home">
-            <h2 class="home__greetings">Hi! My Name is </h2>
-            <h1 class="home__name">
-                <ul class="name__header">
-                    <li>S</li>
-                    <li>a</li>
-                    <li>t</li>
-                    <li>y</li>
-                    <li>a</li>
-                    <li>j</li>
-                    <li>i</li>
-                    <li>t</li>
-                    <li></li>
-                    <li>S</li>
-                    <li>a</li>
-                    <li>h</li>
-                    <li>o</li>
-                    <li>o</li>
-                </ul>
-            </h1>
-            <h2 class="home__skills">Full Stack Developer | Developer | Tinkerer</h2>
+      <section class="home">
+        <h2 class="home__greetings">Hi! My Name is</h2>
+        <h1 class="home__name">
+          <ul class="name__header">
+            <li>S</li>
+            <li>a</li>
+            <li>t</li>
+            <li>y</li>
+            <li>a</li>
+            <li>j</li>
+            <li>i</li>
+            <li>t</li>
+            <li></li>
+            <li>S</li>
+            <li>a</li>
+            <li>h</li>
+            <li>o</li>
+            <li>o</li>
+          </ul>
+        </h1>
+        <h2 class="home__skills">Full Stack Developer | Developer</h2>
 
-            <div class="social-icons">
-                <a target="_blank" href="https://twitter.com/Satyaji33351978">
-                    <i class="fab fa-x-twitter fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/satyajit-sahoo-28052001/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-            </div>
+        <div class="social-icons">
+          <a target="_blank" href="https://twitter.com/Satyaji33351978">
+            <i class="fab fa-x-twitter fa-2x"></i>
+          </a>
+          <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/satyajit-sahoo-28052001/"
+          >
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+        </div>
 
-            <footer>&copy; No Copyright <span id="year"></span></footer>
-        </section>
+        <footer>&copy; No Copyright <span id="year"></span></footer>
+      </section>
     </main>
 
-
-
-    <script src="https://kit.fontawesome.com/d188fc89c0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d188fc89c0.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
     <script src="./js/particles.js"></script>
-
-
-</body>
-
+  </body>
 </html>
