--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
           <a target="_blank" href="https://twitter.com/Satyaji33351978">
             <i class="fab fa-x-twitter fa-2x"></i>
           </a>
+          <a
+            target="_blank"
+            href="https://codesandbox.io/u/satyajitsahoo.82040002"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="30"
+              height="30"
+            >
+              <path
+                fill="#FFF"
+                d="M22.5 17.95 22.41 6 11.955 0 1.5 6v12l10.455 6L22.5 17.95zm-2.173-4.711L16.982 15.1v3.514L13.01 20.91v-8.272l7.317-4.157v4.758zm-9.422 7.671-3.972-2.296v-3.516l-3.345-1.86V8.481l7.317 4.157v8.272zM4.634 6.601 4.633 6.6l3.913-2.255 3.43 1.968 3.41-1.945 3.871 2.197-7.32 4.18-7.303-4.144z"
+              ></path>
+            </svg>
+          </a>
           <a target="_blank" href="https://github.com/Satyajit-Sahoo45">
             <i class="fab fa-github fa-2x"></i>
           </a>
