--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           <li class="menu-nav__item">
             <a href="./contact.html" class="menu-nav__link">Contact Me</a>
           </li>
+
+          <li class="menu-nav__item">
+            <button id="downloadBtn">Download Resume</button>
+          </li>
         </ul>
       </nav>
     </header>
