update about section

--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
                 <li class="menu-nav__item">
                     <a href="./contact.html" class="menu-nav__link">Contact Me</a>
                 </li>
+                <li class="menu-nav__item">
+                    <button id="downloadBtn">Download Resume</button>
+                  </li>
             </ul>
         </nav>
     </header>
@@ -42,13 +45,12 @@
             <div class="about__bio-image">
                 <div class="about__bio">
                     <h2 class="text-secondary">BIO</h2>
-                    <p>I am a passionate Full Stack Web developer from Odisha, specializing in creating dynamic websites
-                        with exceptional user experiences. Proficient in HTML, CSS, JavaScript, NextJS, ReactJS, Redux,
-                        Postgresql, MongoDB and Django; I'm excited about learning more and expanding my skills in web
-                        development, which will enhance my ability to create better UI and provide improved UX. I enjoy
-                        collaborating with like-minded individuals, sharing ideas, and working in a team. Apart from web
-                        development, I love watching movies, sitcoms, playing video games, and outdoor games like
-                        cricket and badminton.</p>
+                    <p style="line-height: 1.5;">A junior software developer with over 7+ months of hands-on experience, I am committed to leveraging my skills in <span class="keyword">React</span>, <span class="keyword">ReactNative</span>, <span class="keyword">NodeJS</span>, <span class="keyword">ExpressJS</span>, <span class="keyword">Redux</span>, <span class="keyword">Django</span>, <span class="keyword">PostgreSQL</span>, and <span class="keyword">MongoDB</span> to contribute effectively within a dynamic team environment. Throughout my tenure, I have developed a keen passion for crafting efficient, user-friendly applications while maintaining a strong focus on continuous learning and growth in the rapidly evolving landscape of software development.
+                        <br>
+                        <br>
+
+                        I am eager to join a collaborative team where I can leverage my skills and enthusiasm to make a positive impact.  I am driven by the prospect of contributing to meaningful projects, learning from experienced professionals, and fostering a culture of innovation and growth. With a steadfast commitment to excellence and a passion for software development, I am poised to embark on the next phase of my career journey and embrace new challenges with enthusiasm and determination.
+                    </p>
                 </div>
             </div>
             </div>
