--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,9 @@
               >Contact Me</a
             >
           </li>
+          <li class="menu-nav__item">
+            <button id="downloadBtn">Download Resume</button>
+          </li>
         </ul>
       </nav>
     </header>
