--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,9 @@
           <li class="menu-nav__item">
             <a href="./contact.html" class="menu-nav__link">Contact Me</a>
           </li>
+          <li class="menu-nav__item">
+            <button id="downloadBtn">Download Resume</button>
+          </li>
         </ul>
       </nav>
     </header>
