modified all sections

--- a/about.html
+++ b/about.html
@@ -59,9 +59,17 @@
                 <div class="jobs__job">
                     <div>
                         <h3>Hyscaler, Bhubaneswar</h3>
+                        <h6>Jr. Software Developer</h6>
+                    </div>
+                    <h2 class="text-secondary">Jan 2024 - Present</h2>
+                </div>
+
+                <div class="jobs__job">
+                    <div>
+                        <h3>Hyscaler, Bhubaneswar</h3>
                         <h6>Apprenticeship on Full Stack Web Development</h6>
                     </div>
-                    <h2 class="text-secondary">Jul 2023 - Present</h2>
+                    <h2 class="text-secondary">Jul 2023 - Jan 2024</h2>
                 </div>
 
                 <div class="jobs__job">
