--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,11 @@
       rel="stylesheet"
     />
     <title>Contact Satyajit</title>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </head>
 
   <body>
+    <div id="particles-js"></div>
     <header>
       <div class="menu-btn">
         <span class="menu-btn__burger"></span>
@@ -97,6 +99,7 @@
       src="https://kit.fontawesome.com/d188fc89c0.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/particles.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
