--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,11 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
     <title>Projects by Satyajit</title>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </head>
 
   <body>
+    <div id="particles-js"></div>
     <header>
       <div class="menu-btn">
         <span class="menu-btn__burger"></span>
@@ -239,6 +241,7 @@
       src="https://kit.fontawesome.com/d188fc89c0.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/particles.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
